test: improve timer start event tests for past start date scenarios
Address review feedback for both tests:
- Fix race condition by capturing clock time before deployment
- Improve 1st timer assertions: use isBetween(now, now + 1min) for due
  date, assert triggered record due date matches created timer due date,
  and assert triggered record timestamp is 'now' (or shortly after)

For shouldTriggerImmediatelyAndSpaceCyclesCorrectlyWhenStartDateIsInThePast:
- Replace limit/count R3 exhaustion check with expectNoMatchingRecords
- Remove assertions on "start" and "end" process instance elements
  as they are not relevant to the verified behavior and add noise to the test

Co-authored-by: Nico Korthout <nico.korthout@camunda.com>
(cherry picked from commit c4f5b548688b0982946329bad1a68fea1709d01d)